--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
--e git://github.com/gboeing/osmnx@main#egg=osmnx
--e git://github.com/matejker/network@master#egg=network
-networkx>=2.4
-matplotlib>=3.2.1
-numpy>=1.18.5
+-e git+https://github.com/gboeing/osmnx@main#egg=osmnx
+-e git+https://github.com/matejker/network@master#egg=mk-network
+networkx>=3.3
+matplotlib>=3.9.1
+numpy>=2.0.1
 notebook
