--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
 -e git+https://github.com/gboeing/osmnx@main#egg=osmnx
 -e git+https://github.com/matejker/network@master#egg=mk-network
 networkx>=2.5
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvtx-cu12==12.1.105
+torch==2.3.1+cu121
 matplotlib>=3.9.1
 numpy>=1.22.0
 notebook
